--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@
 #excluir los archivos de configuracion raiz para que funcione
 #todo local en los puestos de trabajo
 
-#config.php
+config.php
 /webmaster/ajax/templates_c
 /webmaster/templates_c
+/webmaster/config.php
 
 
